--- a/index.ipynb
+++ b/index.ipynb
@@ -46,9 +46,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, there'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "yell_hello = \"hello, there\" # \"HELLO, THERE\"\n",
+    "yell_hello = \"hello, there\".capitalize() # \"HELLO, THERE\"\n",
     "yell_hello"
    ]
   },
