--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whisper_hey = \"PSST, HEY\" # \"psst, hey\"\n",
+    "whisper_hey = \"PSST, HEY\".lowercase() # \"psst, hey\"\n",
     "whisper_hey"
    ]
   },
