--- a/index.ipynb
+++ b/index.ipynb
@@ -65,23 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'lowercase'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-dd0d423b26d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwhisper_hey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"PSST, HEY\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlowercase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# \"psst, hey\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwhisper_hey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'lowercase'"
-     ]
+     "data": {
+      "text/plain": [
+       "'psst, hey'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "whisper_hey = \"PSST, HEY\".lowercase() # \"psst, hey\"\n",
+    "whisper_hey = \"PSST, HEY\".lower() # \"psst, hey\"\n",
     "whisper_hey"
    ]
   },
