automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,22 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, there'"
+       "'HELLO, THERE'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yell_hello = \"hello, there\".capitalize() # \"HELLO, THERE\"\n",
+    "yell_hello = \"hello, there\".upper() # \"HELLO, THERE\"\n",
     "yell_hello"
    ]
   },
