automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiorn_mantra = \"LEARN. LOVE. CODE.\" # \"Learn. Love. Code\"\n",
+    "flatiorn_mantra = \"LEARN. LOVE. CODE.\". # \"Learn. Love. Code\"\n",
     "flatiorn_mantra"
    ]
   },
