automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lenght_of_list = [\"i'm\", \"a\", \"list\"] # 3\n",
+    "lenght_of_list = len([\"i'm\", \"a\", \"list\"] # 3\n",
     "lenght_of_list"
    ]
   },
