--- a/index.ipynb
+++ b/index.ipynb
@@ -149,11 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lenght_of_list = len([\"i'm\", \"a\", \"list\"] # 3\n",
+    "lenght_of_list = len([\"i'm\", \"a\", \"list\"]) # 3\n",
     "lenght_of_list"
    ]
   },
