--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
+    "longest_word_in_list = max([\"i'm\", \"a\", \"list\"])# \"list\"\n",
     "longest_word_in_list"
    ]
   },
