--- a/index.ipynb
+++ b/index.ipynb
@@ -170,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'list'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "longest_word_in_list = max([\"i'm\", \"a\", \"list\"])# \"list\"\n",
     "longest_word_in_list"
@@ -184,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smallest_number = [1, 3, 4, 78] # 1\n",
+    "smallest_number = min([1, 3, 4, 78] # 1\n",
     "smallest_number"
    ]
   },
