--- a/index.ipynb
+++ b/index.ipynb
@@ -191,11 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "smallest_number = min([1, 3, 4, 78] # 1\n",
+    "smallest_number = min([1, 3, 4, 78])\n",
+    "# 1\n",
     "smallest_number"
    ]
   },
