--- a/index.ipynb
+++ b/index.ipynb
@@ -213,11 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sum_of_numbers = [1,2,3,5] # 11\n",
+    "sum_of_numbers = sum([1,2,3,5]) # 11\n",
     "sum_of_numbers"
    ]
   },
