automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boolean_compare = True [COMPARISON] True # False\n",
+    "# boolean_compare = True [COMPARISON True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False"
    ]
   },
