--- a/index.ipynb
+++ b/index.ipynb
@@ -257,11 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boolean_compare = True  True # False\n",
+    "boolean_compare = True != True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False"
    ]
   },
