--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,8 @@
    "outputs": [],
    "source": [
     "boolean_compare = True != True # False\n",
-    "# boolean_compare2 = False [COMPARISON] True # False"
+    "# boolean_compare2 = False [COMPARISON] True # False\n",
+    "boolean_compare"
    ]
   },
   {
