--- a/index.ipynb
+++ b/index.ipynb
@@ -257,11 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "boolean_compare = True != True # False\n",
+    "boolean_compare = True > True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False\n",
     "boolean_compare"
    ]
