--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    ],
    "source": [
     "boolean_compare = True > True # False\n",
-    "# boolean_compare2 = False [COMPARISON] True # False\n",
+    "# boolean_compare2 = False == True # False\n",
     "boolean_compare"
    ]
   },
