automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -266,15 +266,15 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "boolean_compare = True > True # False\n",
-    "# boolean_compare2 = False == True # False\n",
-    "boolean_compare"
+    "boolean_compare2 = False == True # False\n",
+    "boolean_compare2"
    ]
   },
   {
